--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(20px + 2vmin);
 }
 
 .App-link {
@@ -35,4 +22,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.light-theme {
+  background-color: #fff;
+  color: #000;
+}
+
+.dark-theme {
+  background-color: #333;
+  color: #fff;
+}
+
+.theme-switcher-btn {
+  padding: 10px 20px;
+  font-size: 2rem;
+  margin: 20px;
+  cursor: pointer;
 }
